--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Pizza Recipe</a>
+    <h1>Pizza</h1>    
 </body>
 </html>
