--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
-        <li></li>
-        <li></li>
+        <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+        <li><a href="./recipes/fried-chicken.html">Fried Chicken</a></li>
     </ul>
 </body>
 </html>
