--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
         <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
         <li><a href="./recipes/fried-chicken.html">Fried Chicken</a></li>
     </ul>
