Add CSS file (styles.css)
Added styles.css and linked it to every page.
The website now has a consistent look.

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Butter Chicken</h1>
-    <img src="../images/butter-chicken.jpg" alt="Butter Chicken" width="30%">
+    <img src="../images/butter-chicken.jpg" alt="Butter Chicken">
     <h2>Description</h2>
     <p>Butter Chicken, also known as murg makhani, is an Indian curry dish made of chicken that’s coated in a well seasoned tomato gravy that includes butter and cream.</p>    
     <h2>Ingredients</h2>
