--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Fried Chicken</h1>
-    <img src="../images/fried-chicken.jpeg" alt="Fried Chicken" width="30%">
+    <img src="../images/fried-chicken.jpeg" alt="Fried Chicken">
     <h2>Description</h2>
     <p>Fried chicken, also known as Southern fried chicken, is a dish consisting of chicken pieces that have been coated with seasoned flour or batter and pan-fried, deep fried, pressure fried, or air fried.</p>    
     <h2>Ingredients</h2>
