--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="big-list">
         <li><a href="./recipes/pizza.html">Pizza</a></li>
         <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
         <li><a href="./recipes/fried-chicken.html">Fried Chicken</a></li>
