--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="../images/pizza.jpg" alt="Cheese Pizza" width="30%">
+    <img src="../images/pizza.jpg" alt="Cheese Pizza">
     <h2>Description</h2>
     <p>Sometimes all you want at the end of the day is a simple cheese pizza. This recipe turns simple into sublime with the addition of an exceptional pizza dough, low-moisture mozzarella cheese, and an easy to make tomato sauce that hits all of the right sweet and savory notes to marry all of the flavors in this pie. A simple garnish of fresh herbs, and you've got perfection on a plate.</p>    
     <h2>Ingredients</h2>
