Add HOME button to go back to index.html

--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -28,6 +28,7 @@
         <li>Move oven rack 3 inches below broiler in oven. Preheat broiler to high heat, once heated place chicken in oven and broil until cooked through and browned, about 10 - 15 minutes*.</li>
         <li>Mix chicken in with sauce: Add in cooked chicken pieces and rendered juices from baking sheet.</li>
         <li>Heat a few minutes longer: Cover and warm through for a few minutes then serve warm over rice or with naan if desired.</li>
-    </ol>        
+    </ol>       
+    <h2><a href="../index.html">HOME</a></h2> 
 </body>    
 </html>
