--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -29,5 +29,6 @@
         <li>If baking in a home oven, bake at 500°F until edges of crust have puffed slightly, about 3 minutes. Rotate pan 90 degrees, and increase oven temperature to broil. Broil until pizza is cooked through and crust is browned, 3 to 6 minutes. If baking in an outdoor pizza oven, cook pizza, using peel to rotate pizza 90 degrees every 20 to 30 seconds, until cooked through and crust is risen and charred in spots, 2 to 4 minutes.</li>
         <li>Using peel, transfer pizza to a cutting board. Garnish with fresh basil or oregano, if desired, and cut into wedges.</li>
     </ol>
+    <h2><a href="../index.html">HOME</a></h2>
 </body>
 </html>
